--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <form action="">
     <label for="cityInput">City:</label>
     <input type="text" id="cityInput">
+    <label for="pays">pays</label>
+    <select name="choixPays" id="pays">
+<option value="fr" selected >France</option>
+<option value="be">Belgique</option>
+<option value="ch">Suisse</option>
+</select>
     <input type="submit" value="Get Weather" id="citySubmit">
 </form>
 <h1 id="city"></h1>
